--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
 <br>
 <br>
 
-<a href="/" class="btn btn-info" style="margin-left: 20%;">login with Facebook</a>
+<a href="/auth/facebook" class="btn btn-info" style="margin-left: 20%;">login with Facebook</a>
 
 
 </div>
